--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "online-portfolio",
+  "name": "my-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,14 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "class-variance-authority": "^0.6.0",
-    "clsx": "^1.2.1",
-    "dotenv": "^16.1.4",
-    "lucide-react": "^0.241.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwind-merge": "^1.13.1",
-    "tailwindcss-animate": "^1.0.6"
+    "react-icons": "^4.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
@@ -25,9 +20,12 @@
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
